docs(utility): add stories and documentation for the utlity api

--- a/.storybook/utility.css
+++ b/.storybook/utility.css
@@ -182,6 +182,8 @@
     --sgds-border-width-2: var(--sgds-border-width-2);
     --sgds-border-width-3: var(--sgds-border-width-3);
     --sgds-border-width-4: var(--sgds-border-width-4);
+    --sgds-border-width-form-default: var(--sgds-form-border-width-default);
+    --sgds-border-width-form-thick: var(--sgds-form-border-width-thick);
     --sgds-breakpoint-sbar-md: var(--sgds-breakpoint-sbar-md);
     --sgds-breakpoint-sbar-lg: var(--sgds-breakpoint-sbar-lg);
     --sgds-breakpoint-sbar-xl: var(--sgds-breakpoint-sbar-xl);
@@ -320,6 +322,15 @@
   .sgds\:h-2-xl {
     height: var(--sgds-spacing-2-xl);
   }
+  .sgds\:h-6 {
+    height: calc(var(--sgds-spacing) * 6);
+  }
+  .sgds\:h-8 {
+    height: calc(var(--sgds-spacing) * 8);
+  }
+  .sgds\:h-12 {
+    height: calc(var(--sgds-spacing) * 12);
+  }
   .sgds\:h-250 {
     height: calc(var(--sgds-spacing) * 250);
   }
@@ -335,6 +346,15 @@
   .sgds\:w-2-xl {
     width: var(--sgds-spacing-2-xl);
   }
+  .sgds\:w-6 {
+    width: calc(var(--sgds-spacing) * 6);
+  }
+  .sgds\:w-8 {
+    width: calc(var(--sgds-spacing) * 8);
+  }
+  .sgds\:w-12 {
+    width: calc(var(--sgds-spacing) * 12);
+  }
   .sgds\:w-18 {
     width: calc(var(--sgds-spacing) * 18);
   }
@@ -343,6 +363,9 @@
   }
   .sgds\:max-w-md {
     max-width: var(--sgds-spacing-md);
+  }
+  .sgds\:cursor-pointer {
+    cursor: pointer;
   }
   .sgds\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
@@ -490,6 +513,34 @@
   .sgds\:border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .sgds\:border-0 {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-0);
+  }
+  .sgds\:border-1 {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-1);
+  }
+  .sgds\:border-2 {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-2);
+  }
+  .sgds\:border-3 {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-3);
+  }
+  .sgds\:border-4 {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-4);
+  }
+  .sgds\:border-form-default {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-form-default);
+  }
+  .sgds\:border-form-thick {
+    border-style: var(--tw-border-style);
+    border-width: var(--sgds-border-width-form-thick);
   }
   .sgds\:border-none {
     --tw-border-style: none;
@@ -811,6 +862,9 @@
   .sgds\:bg-warning-surface-muted {
     background-color: var(--sgds-background-color-warning-surface-muted);
   }
+  .sgds\:p-0 {
+    padding: calc(var(--sgds-spacing) * 0);
+  }
   .sgds\:p-2-xl {
     padding: var(--sgds-spacing-2-xl);
   }
@@ -913,6 +967,22 @@
     --tw-leading: var(--sgds-leading-64);
     line-height: var(--sgds-leading-64);
   }
+  .sgds\:font-bold {
+    --tw-font-weight: var(--sgds-font-weight-bold);
+    font-weight: var(--sgds-font-weight-bold);
+  }
+  .sgds\:font-light {
+    --tw-font-weight: var(--sgds-font-weight-light);
+    font-weight: var(--sgds-font-weight-light);
+  }
+  .sgds\:font-regular {
+    --tw-font-weight: var(--sgds-font-weight-regular);
+    font-weight: var(--sgds-font-weight-regular);
+  }
+  .sgds\:font-semibold {
+    --tw-font-weight: var(--sgds-font-weight-semibold);
+    font-weight: var(--sgds-font-weight-semibold);
+  }
   .sgds\:tracking-normal {
     --tw-tracking: var(--sgds-tracking-normal);
     letter-spacing: var(--sgds-tracking-normal);
@@ -932,9 +1002,6 @@
   .sgds\:tracking-wider {
     --tw-tracking: var(--sgds-tracking-wider);
     letter-spacing: var(--sgds-tracking-wider);
-  }
-  .sgds\:break-words {
-    overflow-wrap: break-word;
   }
   .sgds\:text-accent-default {
     color: var(--sgds-text-color-accent-default);
@@ -1172,6 +1239,10 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-tracking {
   syntax: "*";
   inherits: false;
@@ -1182,6 +1253,7 @@
       --tw-space-y-reverse: 0;
       --tw-border-style: solid;
       --tw-leading: initial;
+      --tw-font-weight: initial;
       --tw-tracking: initial;
     }
   }
