test(*): testing on react vite app

--- a/cypress/apps/react-19-app/src/index.css
+++ b/cypress/apps/react-19-app/src/index.css
@@ -1,3 +1,5 @@
+@import "@govtechsg/sgds-web-component/css/utility.css";
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
