chore(*): update border in sidebar layout story

--- a/.storybook/utility.css
+++ b/.storybook/utility.css
@@ -568,6 +568,10 @@
     border-style: var(--tw-border-style);
     border-width: var(--sgds-border-width-form-thick);
   }
+  .sgds\:border-r {
+    border-right-style: var(--tw-border-style);
+    border-right-width: 1px;
+  }
   .sgds\:border-none {
     --tw-border-style: none;
     border-style: none;
